correct overflow bug

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -12,7 +12,7 @@ body {
 	overflow: auto;
 }
 
-article {width:90%; height:100%; font-size: 90%; margin: 4.5em auto 0 auto; overflow: hidden; 
+article {width:90%; height:100%; font-size: 90%; margin: 4.5em auto 0 auto; overflow-x: hidden; overflow-y: auto; 
 	padding-bottom: 1em; background-color: #e3e3e3; box-shadow: 1px 1px 1px 1px #999;}
 article#teamsContainer {min-width:1100px;}
 nav {width: 100%; background: #555;  padding: .3em 0;}
